package it.naar.quiz.domain.model.question;

public class QuestionAta extends AbstractQuestion {
    ArgumentAta ataArgument;


    public ArgumentAta getAtaChapter() {
        return ataArgument;
    }

    public void setAtaChapter(ArgumentAta argomentoAta) {
        this.ataArgument = argomentoAta;
    }
}
