package it.naar.quiz.domain.question;

public class QuizFinalita {
    int id;
    String name;
    String description;
    public QuizFinalita(String name, String description) {
        this.name = name;
        this.description = description;
    }

    public QuizFinalita() {
    }
}
