@startuml
'https://plantuml.com/class-diagram
'left to right direction


'together {
abstract class AbstractArgomento
class Argomento
class ArgomentoAta
class AtaLevel
class QuestionGenerica
class QuestionAta
class QuestionScope
'}
together {
class Quiz
abstract class AbstractQuestion
class QuizFinalita
}
class AbstractBrevetto
class BrevettoPil
class BrevettoEFV


AbstractQuestion <|-- QuestionGenerica
AbstractQuestion <|-- QuestionAta
AbstractArgomento <|-- Argomento
AbstractArgomento <|-- ArgomentoAta
AbstractBrevetto <|-- BrevettoPil
AbstractBrevetto <|-- BrevettoEFV

QuestionAta "*" *-- "*" AtaLevel : has >
QuestionScope "*" --* "1" AbstractQuestion : has <
AbstractQuestion "*" *-- "1" AbstractArgomento : covers >
QuestionScope "*" -o "*" QuizFinalita : apply to >
AbstractBrevetto "*" -o "*" QuestionScope : apply to <
Quiz "*" *-- "*" AbstractQuestion : contains >
Quiz "*" *-- "*" QuizFinalita : has >

'class ArrayList {
'Object[] elementData
'size()
'}
'
'enum TimeUnit {
'DAYS
'HOURS
'MINUTES
'}

@enduml